# rat_http

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
static/: testing.txt
