[package]
name = "rat_http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
shtml = { git = "https://github.com/swlkr/shtml", version = "0.2.0" }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.1", features = ["timeout", "trace", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
